Feature/adding user authentication (#7)
Authentication with tests.
