# swagger/v1/swagger.yaml
@@ -1,6 +1,343 @@
 ---
-openapi: 3.0.1
+swagger: '2.0'
 info:
-  title: Todo List API V1
+  title: API V1
   version: v1
-paths: {}
+definitions:
+  sign_up:
+    type: object
+    properties:
+      user:
+        type: string
+        minLength: 1
+      message:
+        type: string
+        minLength: 1
+    required:
+    - user
+    - message
+  log_in:
+    type: object
+    properties:
+      user:
+        type: string
+        minLength: 1
+      logged_in:
+        type: boolean
+        not:
+          type: 'null'
+      message:
+        type: string
+        minLength: 1
+    required:
+    - user
+    - logged_in
+    - message
+  all_projects:
+    type: object
+    properties:
+      data:
+        type: array
+        items:
+          type: object
+          properties:
+            id:
+              type: string
+              minLength: 1
+            type:
+              type: string
+              minLength: 1
+            attributes:
+              type: array
+              items:
+                type: object
+                properties:
+                  name:
+                    type: string
+                    minLength: 1
+                required:
+                - name
+            relationships:
+              type: array
+              items:
+                type: object
+                properties:
+                  user:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        data:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              id:
+                                type: string
+                                minLength: 1
+                              type:
+                                type: string
+                                minLength: 1
+                            required:
+                            - id
+                            - type
+                      required:
+                      - data
+                required:
+                - user
+          required:
+          - id
+          - type
+          - attributes
+          - relationships
+    required:
+    - data
+  single_project:
+    type: object
+    properties:
+      data:
+        type: object
+        properties:
+          id:
+            type: string
+            minLength: 1
+          type:
+            type: string
+            minLength: 1
+          attributes:
+            type: object
+            properties:
+              name:
+                type: string
+                minLength: 1
+            required:
+            - name
+          relationships:
+            type: object
+            properties:
+              user:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        minLength: 1
+                      type:
+                        type: string
+                        minLength: 1
+                    required:
+                    - id
+                    - type
+                required:
+                - data
+            required:
+            - user
+        required:
+        - id
+        - type
+        - attributes
+        - relationships
+    required:
+    - data
+securityDefinitions:
+  basic_auth:
+    type: http
+    scheme: basic
+paths:
+  "/api/v1":
+    get:
+      summary: show projects
+      tags:
+      - projects
+      produces:
+      - application/json
+      security:
+      - basicAuth: []
+      responses:
+        '200':
+          description: successful
+          schema:
+            anyOf:
+            - "$ref": "#/definitions/all_projects"
+            - {}
+        '401':
+          description: unauthorized
+  "/api/v1/projects":
+    post:
+      summary: create new project
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      tags:
+      - projects
+      security:
+      - basicAuth: []
+      parameters:
+      - name: name
+        in: formData
+        type: string
+        required: true
+      responses:
+        '201':
+          description: created
+          schema:
+            type: object
+            "$ref": "#/definitions/single_project"
+        '422':
+          description: unprocessable_entity
+        '401':
+          description: unauthorized
+  "/api/v1/projects/{id}":
+    get:
+      summary: show project
+      produces:
+      - application/json
+      tags:
+      - projects
+      security:
+      - basicAuth: []
+      parameters:
+      - name: id
+        in: path
+        type: string
+        description: id
+        required: true
+      responses:
+        '200':
+          description: successful
+          schema:
+            type: object
+            "$ref": "#/definitions/single_project"
+        '404':
+          description: not_found
+        '401':
+          description: unauthorized
+    put:
+      summary: update project
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      tags:
+      - projects
+      security:
+      - basicAuth: []
+      parameters:
+      - name: id
+        in: path
+        type: string
+        description: id
+        required: true
+      - name: name
+        in: formData
+        type: string
+        required: true
+      responses:
+        '200':
+          description: successful
+          schema:
+            type: object
+            "$ref": "#/definitions/single_project"
+        '422':
+          description: unprocessable_entity
+        '401':
+          description: unauthorized
+    delete:
+      summary: delete project
+      tags:
+      - projects
+      security:
+      - basicAuth: []
+      parameters:
+      - name: id
+        in: path
+        type: string
+        description: id
+        required: true
+      responses:
+        '204':
+          description: no_content
+        '401':
+          description: unauthorized
+  "/api/v1/signup":
+    post:
+      summary: create account
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      tags:
+      - registration
+      parameters:
+      - name: username
+        in: formData
+        type: string
+        required: true
+      - name: password
+        in: formData
+        type: string
+        required: true
+      - name: password_confirmation
+        in: formData
+        type: string
+        required: true
+      responses:
+        '201':
+          description: successful
+          schema:
+            type: object
+            "$ref": "#/definitions/sign_up"
+        '422':
+          description: unprocessable_entity
+          schema:
+            type: object
+            properties:
+              errors:
+                type: object
+  "/api/v1/login":
+    post:
+      summary: create session
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      tags:
+      - session
+      parameters:
+      - name: username
+        in: formData
+        type: string
+        required: true
+      - name: password
+        in: formData
+        type: string
+        required: true
+      responses:
+        '201':
+          description: created
+          schema:
+            type: object
+            "$ref": "#/definitions/log_in"
+        '401':
+          description: unprocessable_entity
+          schema:
+            type: object
+            properties:
+              errors:
+                type: object
+  "/api/v1/logout":
+    delete:
+      summary: delete session
+      tags:
+      - session
+      responses:
+        '200':
+          description: successfull
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
